Refactor all notebook output & Update Internmediate_ML_02,ipynb

--- a/Rich/Intro to ML/Intro_to_ML_04.ipynb
+++ b/Rich/Intro to ML/Intro_to_ML_04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "import pandas as pd\n",
     "    \n",
     "# Load data\n",
-    "melbourne_file_path = '/Users/Rich/Desktop/Kaggle/Kaggle_learn/Intro_to_ML/melb_data.csv'\n",
+    "melbourne_file_path = '/Users/Rich/Desktop/Kaggle/KaggleTeamLearn/Rich/Intro to ML/melb_data.csv'\n",
     "melbourne_data = pd.read_csv(melbourne_file_path) \n",
     "\n",
     "# Filter rows with missing values\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
     "\n",
     "\n",
     "# Path of the file to read\n",
-    "iowa_file_path = '/Users/Rich/Desktop/Kaggle/Kaggle_learn/Intro_to_ML/home_data.csv'\n",
+    "iowa_file_path = '/Users/Rich/Desktop/Kaggle/KaggleTeamLearn/Rich/Intro to ML/home_data.csv'\n",
     "\n",
     "home_data = pd.read_csv(iowa_file_path)\n",
     "# Create target object and call it y\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "DecisionTreeRegressor(max_leaf_nodes=100, random_state=1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
