--- a/Rich/Intro to ML/Intro_to_ML_01.ipynb
+++ b/Rich/Intro to ML/Intro_to_ML_01.ipynb
@@ -14,16 +14,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in /Users/Rich/Library/Python/3.9/lib/python/site-packages (1.5.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/Rich/Library/Python/3.9/lib/python/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.20.3 in /Users/Rich/Library/Python/3.9/lib/python/site-packages (from pandas) (1.24.1)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/Rich/Library/Python/3.9/lib/python/site-packages (from pandas) (2022.7.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.15.0)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip3 install pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +409,7 @@
        "[13580 rows x 21 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +419,7 @@
     "\n",
     "# https://www.kaggle.com/datasets/dansbecker/melbourne-housing-snapshot\n",
     "# 設定file path\n",
-    "melbourne_file_path = '/Users/Rich/Desktop/Kaggle/Kaggle_learn/Intro_to_ML/melb_data.csv'\n",
+    "melbourne_file_path = '/Users/Rich/Desktop/Kaggle/KaggleTeamLearn/Rich/Intro to ML/melb_data.csv'\n",
     "melbourne_data = pd.read_csv(melbourne_file_path) \n",
     "\n",
     "#describe() 顯示資料的統計值\n",
@@ -415,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +788,7 @@
        "[13580 rows x 21 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +1004,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,215 +1015,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rooms</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Distance</th>\n",
-       "      <th>Postcode</th>\n",
-       "      <th>Bedroom2</th>\n",
-       "      <th>Bathroom</th>\n",
-       "      <th>Car</th>\n",
-       "      <th>Landsize</th>\n",
-       "      <th>BuildingArea</th>\n",
-       "      <th>YearBuilt</th>\n",
-       "      <th>Lattitude</th>\n",
-       "      <th>Longtitude</th>\n",
-       "      <th>Propertycount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>13580.000000</td>\n",
-       "      <td>1.358000e+04</td>\n",
-       "      <td>13580.000000</td>\n",
-       "      <td>13580.000000</td>\n",
-       "      <td>13580.000000</td>\n",
-       "      <td>13580.000000</td>\n",
-       "      <td>13518.000000</td>\n",
-       "      <td>13580.000000</td>\n",
-       "      <td>7130.000000</td>\n",
-       "      <td>8205.000000</td>\n",
-       "      <td>13580.000000</td>\n",
-       "      <td>13580.000000</td>\n",
-       "      <td>13580.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>2.937997</td>\n",
-       "      <td>1.075684e+06</td>\n",
-       "      <td>10.137776</td>\n",
-       "      <td>3105.301915</td>\n",
-       "      <td>2.914728</td>\n",
-       "      <td>1.534242</td>\n",
-       "      <td>1.610075</td>\n",
-       "      <td>558.416127</td>\n",
-       "      <td>151.967650</td>\n",
-       "      <td>1964.684217</td>\n",
-       "      <td>-37.809203</td>\n",
-       "      <td>144.995216</td>\n",
-       "      <td>7454.417378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.955748</td>\n",
-       "      <td>6.393107e+05</td>\n",
-       "      <td>5.868725</td>\n",
-       "      <td>90.676964</td>\n",
-       "      <td>0.965921</td>\n",
-       "      <td>0.691712</td>\n",
-       "      <td>0.962634</td>\n",
-       "      <td>3990.669241</td>\n",
-       "      <td>541.014538</td>\n",
-       "      <td>37.273762</td>\n",
-       "      <td>0.079260</td>\n",
-       "      <td>0.103916</td>\n",
-       "      <td>4378.581772</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>8.500000e+04</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>3000.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1196.000000</td>\n",
-       "      <td>-38.182550</td>\n",
-       "      <td>144.431810</td>\n",
-       "      <td>249.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>6.500000e+05</td>\n",
-       "      <td>6.100000</td>\n",
-       "      <td>3044.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>177.000000</td>\n",
-       "      <td>93.000000</td>\n",
-       "      <td>1940.000000</td>\n",
-       "      <td>-37.856822</td>\n",
-       "      <td>144.929600</td>\n",
-       "      <td>4380.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>9.030000e+05</td>\n",
-       "      <td>9.200000</td>\n",
-       "      <td>3084.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>126.000000</td>\n",
-       "      <td>1970.000000</td>\n",
-       "      <td>-37.802355</td>\n",
-       "      <td>145.000100</td>\n",
-       "      <td>6555.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>1.330000e+06</td>\n",
-       "      <td>13.000000</td>\n",
-       "      <td>3148.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>651.000000</td>\n",
-       "      <td>174.000000</td>\n",
-       "      <td>1999.000000</td>\n",
-       "      <td>-37.756400</td>\n",
-       "      <td>145.058305</td>\n",
-       "      <td>10331.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>9.000000e+06</td>\n",
-       "      <td>48.100000</td>\n",
-       "      <td>3977.000000</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>433014.000000</td>\n",
-       "      <td>44515.000000</td>\n",
-       "      <td>2018.000000</td>\n",
-       "      <td>-37.408530</td>\n",
-       "      <td>145.526350</td>\n",
-       "      <td>21650.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              Rooms         Price      Distance      Postcode      Bedroom2  \\\n",
-       "count  13580.000000  1.358000e+04  13580.000000  13580.000000  13580.000000   \n",
-       "mean       2.937997  1.075684e+06     10.137776   3105.301915      2.914728   \n",
-       "std        0.955748  6.393107e+05      5.868725     90.676964      0.965921   \n",
-       "min        1.000000  8.500000e+04      0.000000   3000.000000      0.000000   \n",
-       "25%        2.000000  6.500000e+05      6.100000   3044.000000      2.000000   \n",
-       "50%        3.000000  9.030000e+05      9.200000   3084.000000      3.000000   \n",
-       "75%        3.000000  1.330000e+06     13.000000   3148.000000      3.000000   \n",
-       "max       10.000000  9.000000e+06     48.100000   3977.000000     20.000000   \n",
-       "\n",
-       "           Bathroom           Car       Landsize  BuildingArea    YearBuilt  \\\n",
-       "count  13580.000000  13518.000000   13580.000000   7130.000000  8205.000000   \n",
-       "mean       1.534242      1.610075     558.416127    151.967650  1964.684217   \n",
-       "std        0.691712      0.962634    3990.669241    541.014538    37.273762   \n",
-       "min        0.000000      0.000000       0.000000      0.000000  1196.000000   \n",
-       "25%        1.000000      1.000000     177.000000     93.000000  1940.000000   \n",
-       "50%        1.000000      2.000000     440.000000    126.000000  1970.000000   \n",
-       "75%        2.000000      2.000000     651.000000    174.000000  1999.000000   \n",
-       "max        8.000000     10.000000  433014.000000  44515.000000  2018.000000   \n",
-       "\n",
-       "          Lattitude    Longtitude  Propertycount  \n",
-       "count  13580.000000  13580.000000   13580.000000  \n",
-       "mean     -37.809203    144.995216    7454.417378  \n",
-       "std        0.079260      0.103916    4378.581772  \n",
-       "min      -38.182550    144.431810     249.000000  \n",
-       "25%      -37.856822    144.929600    4380.000000  \n",
-       "50%      -37.802355    145.000100    6555.000000  \n",
-       "75%      -37.756400    145.058305   10331.000000  \n",
-       "max      -37.408530    145.526350   21650.000000  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Practice\n",
     "\n",
@@ -1218,7 +1025,7 @@
     "import pandas as pd\n",
     "\n",
     "#設定file path\n",
-    "iowa_file_path = '/Users/Rich/Desktop/Kaggle/Kaggle_learn/Intro_to_ML/melb_data.csv'\n",
+    "iowa_file_path = '/Users/Rich/Desktop/Kaggle/KaggleTeamLearn/Rich/Intro to ML/melb_data.csv'\n",
     "\n",
     "#使用pandas讀取csv檔案\n",
     "home_data = pd.read_csv(iowa_file_path)\n",
@@ -1250,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
