Refactor: Notebook docs (#11)
all notebook output & Update Internmediate_ML_02,ipynb

--- a/Rich/Internediate ML/Intermidiate_ML_03.ipynb
+++ b/Rich/Internediate ML/Intermidiate_ML_03.ipynb
@@ -1,14 +1,5 @@
 {
- "cells": [
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://www.kaggle.com/code/alexisbcook/machine-learning-competitions"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -16,7 +7,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.6"
   },
   "orig_nbformat": 4,
