--- a/Rich/Internediate ML/Intermediate_ML_02.ipynb
+++ b/Rich/Internediate ML/Intermediate_ML_02.ipynb
@@ -21,38 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Read the data\n",
-    "data = pd.read_csv('/Users/Rich/Desktop/Kaggle/Kaggle_team_learn/Internediate ML/melb_data.csv')\n",
     "\n",
-    "# Separate target from predictors\n",
+    "data = pd.read_csv('/Users/Rich/Desktop/Kaggle/KaggleTeamLearn/Rich/Internediate ML/melb_data.csv')\n",
+    "\n",
+    "\n",
     "y = data.Price\n",
     "X = data.drop(['Price'], axis=1)\n",
     "\n",
-    "# Divide data into training and validation subsets\n",
+    "\n",
     "X_train_full, X_valid_full, y_train, y_valid = train_test_split(X, y, train_size=0.8, test_size=0.2,\n",
     "                                                                random_state=0)\n",
     "\n",
-    "# Drop columns with missing values (simplest approach)\n",
     "cols_with_missing = [col for col in X_train_full.columns if X_train_full[col].isnull().any()] \n",
     "X_train_full.drop(cols_with_missing, axis=1, inplace=True)\n",
     "X_valid_full.drop(cols_with_missing, axis=1, inplace=True)\n",
     "\n",
-    "# \"Cardinality\" means the number of unique values in a column\n",
-    "# Select categorical columns with relatively low cardinality (convenient but arbitrary)\n",
+    "\n",
     "low_cardinality_cols = [cname for cname in X_train_full.columns if X_train_full[cname].nunique() < 10 and \n",
     "                        X_train_full[cname].dtype == \"object\"]\n",
     "\n",
-    "# Select numerical columns\n",
+    "\n",
     "numerical_cols = [cname for cname in X_train_full.columns if X_train_full[cname].dtype in ['int64', 'float64']]\n",
     "\n",
-    "# Keep selected columns only\n",
+    "\n",
     "my_cols = low_cardinality_cols + numerical_cols\n",
     "X_train = X_train_full[my_cols].copy()\n",
     "X_valid = X_valid_full[my_cols].copy()"
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +192,7 @@
        "6043        1.0     673.0  -37.76230    144.8272         4217.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +212,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +232,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -258,8 +256,10 @@
     }
    ],
    "source": [
-    "# Get list of categorical variables\n",
+    "\n",
     "s = (X_train.dtypes == 'object')\n",
+    "#這行可以理解成是把X_train的每一個column的type都跟object比較，如果是object的話就會是True，\n",
+    "#如果不是的話就會是False，並且會印出True的column name\n",
     "object_cols = list(s[s].index)\n",
     "\n",
     "print(\"Categorical variables:\")\n",
@@ -268,14 +268,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "# Function for comparing different approaches\n",
     "def score_dataset(X_train, X_valid, y_train, y_valid):\n",
     "    model = RandomForestRegressor(n_estimators=100, random_state=0)\n",
     "    model.fit(X_train, y_train)\n",
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -322,11 +321,10 @@
    "source": [
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
-    "# Make copy to avoid changing original data \n",
+    "\n",
     "label_X_train = X_train.copy()\n",
     "label_X_valid = X_valid.copy()\n",
     "\n",
-    "# Apply ordinal encoder to each column with categorical data\n",
     "ordinal_encoder = OrdinalEncoder()\n",
     "label_X_train[object_cols] = ordinal_encoder.fit_transform(X_train[object_cols])\n",
     "label_X_valid[object_cols] = ordinal_encoder.transform(X_valid[object_cols])\n",
@@ -337,36 +335,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MAE from Approach 3 (One-Hot Encoding):\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "['Type', 'Method', 'Regionname']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "object_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Rich/Library/Python/3.9/lib/python/site-packages/sklearn/utils/validation.py:1858: FutureWarning: Feature names only support names that are all strings. Got feature names with dtypes: ['int', 'str']. An error will be raised in 1.2.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "166089.4893009678\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Rich/Library/Python/3.9/lib/python/site-packages/sklearn/utils/validation.py:1858: FutureWarning: Feature names only support names that are all strings. Got feature names with dtypes: ['int', 'str']. An error will be raised in 1.2.\n",
+      "/Users/Rich/Library/Python/3.9/lib/python/site-packages/sklearn/preprocessing/_encoders.py:828: FutureWarning: `sparse` was renamed to `sparse_output` in version 1.2 and will be removed in 1.4. `sparse_output` is ignored unless you leave `sparse` to its default value.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -374,25 +370,202 @@
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "# Apply one-hot encoder to each column with categorical data\n",
+    "\n",
+    "#handle_unknown = 'ignore' 這個參數是說如果有新的類別出現的話，就不要報錯，而是直接忽略\n",
+    "#sparse = False 這個參數是說不要用稀疏 matrix，而是用一般的matrix\n",
     "OH_encoder = OneHotEncoder(handle_unknown='ignore', sparse=False)\n",
+    "\n",
+    "#步驟是先設定好，然後用fit_transform去fit X_train，然後再用transform去fit X_valid\n",
+    "#接著設定index，最後再把兩個dataframe合併起來(因為我們在處理的是非數值col所以我們前面把他切出來)\n",
+    "\n",
     "OH_cols_train = pd.DataFrame(OH_encoder.fit_transform(X_train[object_cols]))\n",
     "OH_cols_valid = pd.DataFrame(OH_encoder.transform(X_valid[object_cols]))\n",
+    "#這個方法會把原本的column name拿掉，所以要重新加回來\n",
     "\n",
-    "# One-hot encoding removed index; put it back\n",
     "OH_cols_train.index = X_train.index\n",
     "OH_cols_valid.index = X_valid.index\n",
     "\n",
-    "# Remove categorical columns (will replace with one-hot encoding)\n",
     "num_X_train = X_train.drop(object_cols, axis=1)\n",
     "num_X_valid = X_valid.drop(object_cols, axis=1)\n",
     "\n",
-    "# Add one-hot encoded columns to numerical features\n",
-    "OH_X_train = pd.concat([num_X_train, OH_cols_train], axis=1)\n",
-    "OH_X_valid = pd.concat([num_X_valid, OH_cols_valid], axis=1)\n",
     "\n",
-    "print(\"MAE from Approach 3 (One-Hot Encoding):\") \n",
-    "print(score_dataset(OH_X_train, OH_X_valid, y_train, y_valid))"
+    "OH_X_train = pd.concat([num_X_train, OH_cols_train], axis=1)\n",
+    "OH_X_valid = pd.concat([num_X_valid, OH_cols_valid], axis=1)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以下是練習"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "X = pd.read_csv('/Users/Rich/Desktop/Kaggle/KaggleTeamLearn/Rich/Internediate ML/home-data-for-ml-course/train.csv', index_col='Id') \n",
+    "X_test = pd.read_csv('/Users/Rich/Desktop/Kaggle/KaggleTeamLearn/Rich/Internediate ML/home-data-for-ml-course/test.csv', index_col='Id')\n",
+    "\n",
+    "\n",
+    "X.dropna(axis=0, subset=['SalePrice'], inplace=True)\n",
+    "y = X.SalePrice\n",
+    "X.drop(['SalePrice'], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "cols_with_missing = [col for col in X.columns if X[col].isnull().any()] \n",
+    "X.drop(cols_with_missing, axis=1, inplace=True)\n",
+    "X_test.drop(cols_with_missing, axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y,\n",
+    "                                                      train_size=0.8, test_size=0.2,\n",
+    "                                                      random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of       MSSubClass MSZoning  LotArea Street LotShape LandContour Utilities  \\\n",
+       "Id                                                                         \n",
+       "619           20       RL    11694   Pave      Reg         Lvl    AllPub   \n",
+       "871           20       RL     6600   Pave      Reg         Lvl    AllPub   \n",
+       "93            30       RL    13360   Pave      IR1         HLS    AllPub   \n",
+       "818           20       RL    13265   Pave      IR1         Lvl    AllPub   \n",
+       "303           20       RL    13704   Pave      IR1         Lvl    AllPub   \n",
+       "...          ...      ...      ...    ...      ...         ...       ...   \n",
+       "764           60       RL     9430   Pave      Reg         Lvl    AllPub   \n",
+       "836           20       RL     9600   Pave      Reg         Lvl    AllPub   \n",
+       "1217          90       RM     8930   Pave      Reg         Lvl    AllPub   \n",
+       "560          120       RL     3196   Pave      Reg         Lvl    AllPub   \n",
+       "685           60       RL    16770   Pave      IR2         Lvl    AllPub   \n",
+       "\n",
+       "     LotConfig LandSlope Neighborhood  ... OpenPorchSF EnclosedPorch  \\\n",
+       "Id                                     ...                             \n",
+       "619     Inside       Gtl      NridgHt  ...         108             0   \n",
+       "871     Inside       Gtl        NAmes  ...           0             0   \n",
+       "93      Inside       Gtl      Crawfor  ...           0            44   \n",
+       "818    CulDSac       Gtl      Mitchel  ...          59             0   \n",
+       "303     Corner       Gtl      CollgCr  ...          81             0   \n",
+       "...        ...       ...          ...  ...         ...           ...   \n",
+       "764     Inside       Gtl      NoRidge  ...         128             0   \n",
+       "836     Inside       Gtl       Sawyer  ...           0             0   \n",
+       "1217    Inside       Gtl       Sawyer  ...           0             0   \n",
+       "560     Inside       Gtl      Blmngtn  ...          20             0   \n",
+       "685    CulDSac       Gtl      NoRidge  ...          81             0   \n",
+       "\n",
+       "     3SsnPorch ScreenPorch  PoolArea  MiscVal  MoSold  YrSold SaleType  \\\n",
+       "Id                                                                       \n",
+       "619          0         260         0        0       7    2007      New   \n",
+       "871          0           0         0        0       8    2009       WD   \n",
+       "93           0           0         0        0       8    2009       WD   \n",
+       "818          0           0         0        0       7    2008       WD   \n",
+       "303          0           0         0        0       1    2006       WD   \n",
+       "...        ...         ...       ...      ...     ...     ...      ...   \n",
+       "764          0         180         0        0       7    2009       WD   \n",
+       "836          0           0         0        0       2    2010       WD   \n",
+       "1217         0           0         0        0       4    2010       WD   \n",
+       "560          0           0         0        0      10    2006       WD   \n",
+       "685          0           0         0        0       6    2010       WD   \n",
+       "\n",
+       "     SaleCondition  \n",
+       "Id                  \n",
+       "619        Partial  \n",
+       "871         Normal  \n",
+       "93          Normal  \n",
+       "818         Normal  \n",
+       "303         Normal  \n",
+       "...            ...  \n",
+       "764         Normal  \n",
+       "836         Normal  \n",
+       "1217        Normal  \n",
+       "560         Normal  \n",
+       "685         Normal  \n",
+       "\n",
+       "[1168 rows x 60 columns]>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "\n",
+    "def score_dataset(X_train, X_valid, y_train, y_valid):\n",
+    "    model = RandomForestRegressor(n_estimators=100, random_state=0)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    preds = model.predict(X_valid)\n",
+    "    return mean_absolute_error(y_valid, preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#使用刪除法把非數值column刪除\n",
+    "#Hint:使用select_dtypes()\n",
+    "#drop_X_train = X_\n",
+    "#drop_X_train = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "# Drop categorical columns that will not be encoded\n",
+    "#label_X_train = X_train.drop(bad_label_cols, axis=1)\n",
+    "#label_X_valid = X_valid.drop(bad_label_cols, axis=1)\n",
+    "\n",
+    "# 使用編碼法把非數值column填滿\n",
+    "#hint:使用OrdinalEncoder()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "# Use as many lines of code as you need!\n",
+    "onehot_encoder = OneHotEncoder()\n",
+    "#OH_X_train = onehot_encoder.fit_transform(X_train)\n",
+    "#使用onehot_encoder填補缺失值\n",
+    "#OH_encoder = OneHotEncoder(handle_unknown='ignore', sparse=False)\n",
+    "\n",
+    "#OH_X_valid = OH_encoder.fit_transform(X_valid)"
    ]
   }
  ],
