feat: Pandas lessons 1-3 (#14)

--- a/Rich/Intro to ML/Intro_to_ML_01.ipynb
+++ b/Rich/Intro to ML/Intro_to_ML_01.ipynb
@@ -414,12 +414,14 @@
      "output_type": "execute_result"
     }
    ],
+
    "source": [
     "import pandas as pd\n",
     "\n",
     "# https://www.kaggle.com/datasets/dansbecker/melbourne-housing-snapshot\n",
     "# 設定file path\n",
     "melbourne_file_path = '/Users/Rich/Desktop/Kaggle/KaggleTeamLearn/Rich/Intro to ML/melb_data.csv'\n",
+
     "melbourne_data = pd.read_csv(melbourne_file_path) \n",
     "\n",
     "#describe() 顯示資料的統計值\n",
@@ -794,11 +796,12 @@
     }
    ],
    "source": [
-    "melbourne_data.isnull()\n"
+    "melbourne_data.isnull()"
    ]
   },
   {
    "cell_type": "code",
+
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -1043,7 +1046,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "kaggle",
    "language": "python",
    "name": "python3"
   },
@@ -1057,12 +1060,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.9"
+
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "965f6fa98b6199e1d728618b9b5f9eac19623e3de6b6beb30f76c2e66abc87de"
    }
   }
  },
